[package]
name = "neolink_decoder"
description = "A cli decoder for the AES encrypted packets"
version = "0.7.0-beta"
authors = ["Andrew King <sheepchaan@gmail.com>"]
edition = "2018"
license = "AGPL-3.0-or-later"

[dependencies]
aes = "0.8.4"
anyhow = "1.0.102"
cfb-mode = "0.8.2"
env_logger = "0.11.9"
hex-string = "0.1.0"
md5 = "0.8.0"
requestty = "0.6.3"
log = "0.4.29"
