[package]
name = "mailnoti"
version = "0.7.0-beta"
edition = "2021"


[dependencies]
anyhow = "1.0.102"
async-std = "1.13.2"
clap = { version = "4.6.0", features = ["derive", "cargo"] }
env_logger = "0.11.9"
get_if_addrs = "0.5.3"
lazy_static = "1.5.0"
log = { version = "0.4.29", features = [ "release_max_level_debug" ] }
mailin-embedded = "0.8.3"
neolink_core = { path = "../core", version = "0.7.0-beta" }
once_cell = "1.21.4"
regex = "1.12.3"
serde = "1.0.228"
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.0.7"
validator = { version = "0.20.0", features = ["derive"] }
